0.9.0.dev0/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py:


Processing Relaxation measurement
=================================
Processing NMR spectra taken for relaxation measurements

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

.. code-block:: Python
   :dedent: 1









.. GENERATED FROM PYTHON SOURCE LINES 19-21

Import API
----------

.. GENERATED FROM PYTHON SOURCE LINES 21-26

.. code-block:: Python

    import spectrochempy as scp

    # short version of the unit registry
    U = scp.ur








.. GENERATED FROM PYTHON SOURCE LINES 27-30

Importing a pseudo 2D NMR spectra
---------------------------------
Define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 30-35

.. code-block:: Python

    datadir = scp.preferences.datadir
    nmrdir = datadir / "nmrdata" / "bruker" / "tests" / "nmr"

    dataset = scp.nmr.read_topspin(nmrdir / "relax" / "100" / "ser", use_list="vdlist")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/.venv/lib/python3.13/site-packages/spectrochempy/core/readers/importer.py:226: UserWarning: No module named 'spectrochempy_hypercomplex'
      warning_(str(e))




.. GENERATED FROM PYTHON SOURCE LINES 36-39

Analysing the data
---------------------
Print dataset summary

.. GENERATED FROM PYTHON SOURCE LINES 39-41

.. code-block:: Python

    dataset








.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plot the dataset

.. GENERATED FROM PYTHON SOURCE LINES 43-47

.. code-block:: Python

    ds = dataset.em(lb=15 * U.Hz)
    ds = ds.fft()
    ds = ds.pk(phc0=-10 * U.deg, phc1=0 * U.deg)
    ds.plot(xlim=(-60, -140))


.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/runner/work/spectrochempy/spectrochempy/build/~gallery_examples/plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py", line 43, in <module>
        ds = dataset.em(lb=15 * U.Hz)
             ^^^^^^^^^^
    AttributeError: 'NoneType' object has no attribute 'em'




.. GENERATED FROM PYTHON SOURCE LINES 48-49

Integrate a region

.. GENERATED FROM PYTHON SOURCE LINES 49-53

.. code-block:: Python

    dsint = ds[:, -90.0:-115.0].simpson()
    dsint.plot(marker="^", ls=":")
    dsint.real


.. GENERATED FROM PYTHON SOURCE LINES 54-57

Fit a model
-----------
create an Optimize object using a simple leastsq method

.. GENERATED FROM PYTHON SOURCE LINES 57-60

.. code-block:: Python

    fitter = scp.Optimize(log_level="INFO", method="leastsq")



.. GENERATED FROM PYTHON SOURCE LINES 61-62

Define the model to fit

.. GENERATED FROM PYTHON SOURCE LINES 62-70

.. code-block:: Python

    def T1_model(t, I0, T1):  # no underscore in parameters names.
        # T1 relaxation model
        import numpy as np

        I = I0 * (1 - np.exp(-t / T1))
        return I



.. GENERATED FROM PYTHON SOURCE LINES 71-72

Add the model to the fitter usermodels as it it not a built-in model

.. GENERATED FROM PYTHON SOURCE LINES 72-74

.. code-block:: Python

    fitter.usermodels = {"T1_model": T1_model}


.. GENERATED FROM PYTHON SOURCE LINES 75-78

Define the parameter variables using a script
(parameter: value, low_bound,  high_bound)
no underscore in parameters names.

.. GENERATED FROM PYTHON SOURCE LINES 78-85

.. code-block:: Python

    fitter.script = """
    MODEL: T1
    shape: T1_model
      $ I0:  1000.0, 1, none
      $ T1:  2.0,    0.1, none
    """


.. GENERATED FROM PYTHON SOURCE LINES 86-87

Performs the fit

.. GENERATED FROM PYTHON SOURCE LINES 87-89

.. code-block:: Python

    fitter.fit(dsint)


.. GENERATED FROM PYTHON SOURCE LINES 90-93

.. code-block:: Python

    som = fitter.predict()
    som


.. GENERATED FROM PYTHON SOURCE LINES 94-96

.. code-block:: Python

    fitter.plotmerit(dsint, som, method="scatter", title="T1 relaxation fitting")


.. GENERATED FROM PYTHON SOURCE LINES 97-99

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 99-101

.. code-block:: Python


    # scp.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.014 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.ipynb <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.zip <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.zip>`
